[tool.poetry]
name = "chuy"
version = "1.4.0"
description = "Set alias to long commands and speed up your workflow."
authors = ["Eliaz Bobadilla <eliaz.bobadilladev@gmail.com>"]
readme = "README.md"
homepage = "https://github.com/UltiRequiem/chuy"
repository = "https://github.com/UltiRequiem/chuy"
keywords = ["commands", "utilities", "cli"]
include = ["LICENSE"]


[tool.poetry.dependencies]
python = "^3.7"
colorama = "^0.4.4"
toml = "^0.10.2"
colores = "^0.1.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^21.7b0"
pylint = "^2.9.6"

[tool.poetry.scripts]
chuy = 'chuy:main'

[tool.chuy]
format = "poetry run black ."
lint = "poetry run pylint chuy tests"
tests = "poetry run pytest"
package = "poetry build && poetry publish"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
